# httpbox

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  main.rs
src/http/: client.rs
src/model/: error.rs  request.rs  response.rs
src/ui/: auth.rs  body_editor.rs  editor.rs  kv_table.rs  mod.rs  request_panel.rs  response_panel.rs  theme.rs
src/util/: mod.rs
