[package]
name = "httpbox"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
